--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -3,3 +3,9 @@
 body {
 	background: black;
 }
+
+canvas {
+	background-image: url(../textures/background-2.jpg);
+	background-size: 100% 100%;
+	cursor: move;
+}
